<resources>
    <string name="app_name">vCalling</string>
    <string name="phone_hint">1521458894</string>
    <string name="register">Register</string>
    <string name="phonenumber">Phone Number:</string>
    <string name="verify_account">Verify Account</string>
    <string name="otpMessage">We send a verification code on your mobile.</string>
    <string name="enterVerification">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="dontgetcode">Do not receive code?</string>
    <string name="resend">Resend</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Setting</string>
    <string name="title_logout">Logout</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contact">Contacts</string>
    <string name="hint_search_people">Search people</string>
    <string name="title_send_friend_request">Send Friend Request</string>
    <string name="title_cancel_friend_request">Cancel Friend Request</string>
    <string name="btn_add_friend">Add Friend</string>
    <string name="btn_cancel_friend_reqest">Cancel Friend Request</string>
</resources>
